--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
 <body>
 <h1>SASS - Preprocesador CSS</h1> 
 
-<div>Documentación: https://sass-lang.com/install
+<div>
+    
+   <a href="https://sass-lang.com/install"> Documentación Instalación </a> 
 
 
     <ol>
 <li>Instalar sass mediante linea de comando en terminal de estacion de trabajo:
 npm install -g sass</li>
 
-<li>Crear archivo main.sass en la carpeta de archivos CSS</li>
+<li>Crear archivo main.sass en la carpeta de archivos CSS </li>
 
-<li>Vincularen archivo html el archivo main.css para los estilos, este será el archivo compilado.</li>
+<li>Vincular archivo html el archivo main.css para los estilos, este será el archivo compilado.</li>
 
-<li> </li>
-<li></li>
-<li></li>
+<li> Desde la terminal posicionarse en la carpeta de estilos css del proyecto. </li>
+
+<li> Desde la carpeta css, ejecutar siguiente comando para compilar: sass --watch main.sass:main.css </li>
+
+<li> Cada vez que se requiera guardar cambios,es necesario compilar nuevamente.</li>
+
 <li></li>
     </ol>
 
