--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>SASS</title>
 </head>
 <body>
@@ -28,9 +28,25 @@ npm install -g sass</li>
 
 <li> Desde la carpeta css, ejecutar siguiente comando para compilar: sass --watch main.sass:main.css </li>
 
-<li> Cada vez que se requiera guardar cambios,es necesario compilar nuevamente.</li>
+<li> Se sugiere registrar variables para aquellas propiedades que puedan ser utilizadas varias veces en el codigo: ejemplo, color, font-family, font-size, </li>
 
-<li></li>
+<li> Verificar el espacio despues de los dos puntos. </li>
+
+<li>Anidación de selectores mediante identación </li>
+
+<li> Importar archivos
+    <ul>
+        <li>Crear archivos que comiencen nombre con _nombre.sass </li>
+        <li> en el archivo main utilizar: @use: nombrearchivo </li>
+    </ul>
+
+</li>
+
+<li> Se recomienda al final que el archivo main.sass sea solo de @use </li>
+
+<li> </li>
+
+
     </ol>
 
 
