--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <title>SASS</title>
 </head>
 <body>
+
+<div class="container">
+    <div class="nav">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem explicabo facere neque beatae voluptate nesciunt ab, numquam similique commodi voluptas. Dolor ipsa incidunt earum explicabo blanditiis libero deserunt qui quidem.</p>
+    </div>
 <h1>SASS - Preprocesador CSS</h1> 
 
+
+
+<h2> Variables</h2>
 <div>
     
    <a href="https://sass-lang.com/install"> Documentación Instalación </a> 
@@ -53,7 +61,7 @@ npm install -g sass</li>
 
 
  </div>
-  
+</div>
 </body>
 </html>
 
